@@ -153,7 +153,7 @@ extern Bool VG_(am_is_valid_for_client) ( Addr start, SizeT len,
                                           UInt prot );
 
 /* Really just a wrapper around VG_(am_mmap_anon_float_valgrind). */
-extern void* VG_(am_shadow_alloc)(SizeT size);
+extern SysRes VG_(am_shadow_alloc)(SizeT size);
 
 /* Unmap the given address range and update the segment array
    accordingly.  This fails if the range isn't valid for valgrind. */
